...
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
  tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
...
        app:layout_constraintVertical_bias="0.453">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtEmail"
        android:layout_below="@+id/edtEmail"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544" />

    <EditText
        android:id="@+id/edtRePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtPassword"
        android:layout_below="@+id/edtPassword"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.722" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edtRePassword"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Create Account"
        android:textColor="#000000"
        android:textSize="70dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
